# zeplod-baremetal

./: .gitignore  CMakeLists.txt  Makefile  NOTICE  README.md  README.zh-CN.md  bm_config.h.template
Demo/: PORTING.md  README.md  qemu_example.mk  run_all.ps1  run_all.sh  run_qemu.sh
Demo/bms_estimation_loop/: CMakeLists.txt  README.md  app_bms_est.h  bm_config.h  main.c
Demo/bms_estimation_loop/modules/: mod_supervisor.c  module_table.c
Demo/daq_frontend/: CMakeLists.txt  README.md  app_daq.h  bm_config.h  main.c
Demo/daq_frontend/modules/: mod_supervisor.c  module_table.c
Demo/foc_current_loop/: CMakeLists.txt  README.md  app_foc.h  bm_config.h  main.c
Demo/foc_current_loop/modules/: mod_supervisor.c  module_table.c
Demo/hrt_bms_coulomb/: CMakeLists.txt  README.md  app_bms.h  bm_config.h  main.c
Demo/hrt_bms_coulomb/modules/: mod_events.c
Demo/hrt_servo_stub/: CMakeLists.txt  README.md  bm_config.h  main.c
Demo/hrt_servo_stub/modules/: mod_events.c  module_table.c
Demo/multi_axis_sync/: CMakeLists.txt  README.md  bm_config.h  main.c
Demo/power_buck_loop/: CMakeLists.txt  README.md  app_power.h  bm_config.h  main.c
Demo/power_buck_loop/modules/: mod_supervisor.c  module_table.c
Demo/stream_audio_agc/: CMakeLists.txt  README.md  app_audio.h  bm_config.h  main.c
Demo/stream_audio_agc/modules/: mod_supervisor.c  module_table.c
Demo/stream_block_rms/: CMakeLists.txt  README.md  app_stream.h  bm_config.h  main.c
Demo/stream_block_rms/modules/: mod_supervisor.c  module_table.c
Demo/stream_bms_pipeline/: CMakeLists.txt  README.md  app_bms_pipeline.h  bm_config.h  main.c
Demo/stream_bms_pipeline/modules/: mod_supervisor.c  module_table.c
Demo/stream_fft/: CMakeLists.txt  README.md  app_fft.h  bm_config.h  main.c
Demo/stream_fft/modules/: mod_supervisor.c  module_table.c
Demo/stream_vibration_diag/: CMakeLists.txt  README.md  app_vibration.h  bm_config.h  main.c
Demo/stream_vibration_diag/modules/: mod_supervisor.c  module_table.c
Demo/stream_vision_frame/: CMakeLists.txt  README.md  app_vision.h  bm_config.h  main.c
Demo/stream_vision_frame/modules/: mod_vision_pipeline.c  module_table.c
cmake/: baremetal.cmake  bm_config_export.cmake  bm_include_dirs.cmake  bm_sdk_esp32_idf.cmake  bm_sdk_stm32g4.cmake  toolchain-arm-none-eabi.cmake  toolchain-riscv-none-elf.cmake  toolchain-xtensa-esp32.cmake  zeplod.cmake  zeplod_library.cmake  zeplod_profiles.cmake
cmake/integration-snippet/: CMakeLists.append.txt  CMakeLists.txt  bm_config.h  test_consumer.c
docs/: 00-快速开始.md  01-框架概览与资源层级.md  02-混合域与执行模型.md  03-执行域与跨域通讯.md  03-核心机制.md  04-构建配置与CMake.md  04-核心机制.md  05-构建配置与CMake.md  05-示例与上手路径.md  06-HAL移植指南.md  06-示例与上手路径.md  07-应用骨架与数据流.md  07-测试与调试.md  08-HAL移植指南.md  08-迁移与演进.md  09-安全与可靠性.md  09-测试与调试.md  10-迁移与演进.md  11-安全与可靠性.md  12-运行时与实例模型.md  13-集成到现有工程.md  14-Port移植层.md  15-静态库构建.md  16-STM32-CubeMX集成.md  17-NXP-MCUXpresso集成.md  18-Keil集成.md  19-IAR集成.md  20-头文件布局.md  21-测试覆盖率基线.md  22-领域算法与模块化路线图.md  23-多领域确定性流式架构.md  24-物理世界领域与算法深度矩阵.md  README.md  architecture.md
examples/: PORTING.md  README.md  examples.txt  qemu_example.mk  run_all.bat  run_all.ps1  run_all.sh  run_native.ps1  (+4 more)
examples/hrt_servo_stub/: CMakeLists.txt  bm_config.h  main.c
examples/multi_channel_bms/: CMakeLists.txt  bm_config.h  main.c
examples/ultra_blink/: CMakeLists.txt  Makefile  PROJECT_SOURCES.md  bm_config.h  main.c
hal_reference/ch32v003/: CMakeLists.txt  bm_hal_critical_ch32v003.c  bm_hal_memory_ch32v003.c  bm_hal_timer_ch32v003.c  bm_hal_uart_ch32v003.c  bm_hal_wdg_ch32v003.c
hal_reference/native_sim/: CMakeLists.txt  bm_hal_adc_sim.c  bm_hal_adc_sim.h  bm_hal_comp_sim.c  bm_hal_comp_sim.h  bm_hal_critical_native.c  bm_hal_encoder_sim.c  bm_hal_memory_native.c  bm_hal_pwm_sim.c  bm_hal_pwm_sim.h  bm_hal_timer_native.c  bm_hal_timer_native.h  bm_hal_uart_native.c  bm_hal_wdg_native.c  bm_hal_wdg_native.h  bm_sync_hal_native.c  bm_sync_hal_native.h
hal_reference/stm32g4/: CMakeLists.txt  bm_hal_adc_stm32g4.c  bm_hal_comp_stm32g4.c  bm_hal_critical_stm32g4.c  bm_hal_encoder_stm32g4.c  bm_hal_instances_stm32g4.h  bm_hal_memory_stm32g4.c  bm_hal_pwm_stm32g4.c  bm_hal_regs_stm32g4.h  bm_hal_timer_stm32g4.c  bm_hal_uart_stm32g4.c  bm_hal_wdg_stm32g4.c
integration/cmake-snippet/: CMakeLists.append.txt  CMakeLists.txt
portable/native_sim/: CMakeLists.txt  bm_drv_adc_native.c  bm_drv_comp_native.c  bm_drv_dma_stream_native.c  bm_drv_encoder_native.c  bm_drv_pwm_native.c  bm_drv_singleton_native.c  bm_hal_comp_sim.h  bm_hal_dma_stream_sim.h  bm_hal_encoder_sim.h  bm_hal_timer_native.h  bm_sync_hal_native.h
portable/qemu_cortex_m0/: CMakeLists.txt  bm_sync_hal_qemu.c
portable/register_ch32v003/: CMakeLists.txt
portable/register_stm32g4/: CMakeLists.txt  bm_drv_adc_stm32g4.c  bm_drv_encoder_stm32g4.c  bm_drv_pwm_stm32g4.c  bm_drv_singleton_stm32g4.c  bm_sync_hal_stm32g4.c
portable/sdk_esp32_idf/: CMakeLists.txt  README.md  bm_drv_singleton_esp32.c  bm_hal_instances_esp32wroom32e.h  bm_hal_sdk_esp32.h  bm_idf_minimal_config.h  idf_component.yml
portable/sdk_stm32g4/: CMakeLists.txt  README.md  bm_drv_adc_stm32g4.c  bm_drv_comp_stm32g4.c  bm_drv_encoder_stm32g4.c  bm_drv_pwm_stm32g4.c  bm_drv_singleton_stm32g4.c  bm_hal_instances_stm32g4.h  bm_hal_sdk_stm32g4.h  bm_sync_hal_stm32g4.c
tests/qemu/: CMakeLists.txt  bm_config.h  run_all.sh  run_hybrid_smoke.ps1  run_hybrid_smoke.sh  smoke_out.txt  test_hybrid_smoke.c  test_qemu_smoke.c
tests/unit/: CMakeLists.txt  test_algorithm.c  test_bms_estimation.c  test_bms_supervision.c  test_channel.c  test_critical.c  test_ctrl_inst.c  test_event.c  test_exec.c  test_hal_dma_stream.c  test_hrt.c  test_log.c  test_mempool.c  test_module.c  test_motor_foc_sensored.c  test_motor_foc_sensorless.c  test_pipeline.c  test_power_control.c  test_priority_mask.c  test_resource_claim.c  test_shell.c  test_skeleton.c  test_snapshot.c  test_stream.c  test_sync.c  test_ticker.c  test_ultra.c  test_wdg.c
tests/unit/fakes/: bm_hal_priority_mask_fake.c  bm_hal_priority_mask_fake.h
tests/unit/unity/: CMakeLists.txt
(+457 files in other folders)
