# daq_frontend：块流 + RMS / 波峰因数（K2）
cmake_minimum_required(VERSION 3.20)

option(NATIVE_SIM_BUILD "Build for host native_sim" OFF)

set(BM_ENABLE_ALGORITHM ON CACHE BOOL "" FORCE)

if(NATIVE_SIM_BUILD)
    project(daq_frontend_native C)
    set(EXAMPLE_ENABLE_MODULE ON)
    set(EXAMPLE_ENABLE_HRT ON)
    set(EXAMPLE_ENABLE_TICKER ON)
    set(EXAMPLE_ENABLE_EXEC ON)
    include(../cmake/native_sim_example.cmake)
    file(GLOB DAQ_MODULES CONFIGURE_DEPENDS modules/*.c)
    bm_add_native_sim_example(daq_frontend
        FRAMEWORK_LIBS bm_core bm_module bm_hrt bm_ticker bm_exec bm_algorithm
        EXTRA_SOURCES ${DAQ_MODULES}
    )
else()
    project(daq_frontend C ASM)
    set(EXAMPLE_ENABLE_MODULE ON)
    set(EXAMPLE_ENABLE_HRT ON)
    set(EXAMPLE_ENABLE_TICKER ON)
    set(EXAMPLE_ENABLE_EXEC ON)
    include(../cmake/qemu_example.cmake)
    file(GLOB DAQ_MODULES CONFIGURE_DEPENDS modules/*.c)
    bm_add_qemu_example(daq_frontend
        FRAMEWORK_LIBS bm_core bm_module bm_hrt bm_ticker bm_exec bm_algorithm
        EXTRA_SOURCES ${DAQ_MODULES}
    )
    target_link_libraries(daq_frontend.elf PRIVATE m)
endif()
